--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
 
     <TextView
@@ -11,7 +10,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:text="Welcome to Budget" />
+        android:layout_marginTop="50dp"
+        android:text="Welcome to Budget"
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/tvName"
@@ -19,8 +20,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tvWelcome"
         android:layout_centerInParent="true"
+        android:layout_marginBottom="100dp"
         android:text="[Name]"
-        android:layout_marginBottom="100dp"/>
+        android:textSize="30sp" />
 
 
     <Button
