--- a/app/src/main/res/layout/component_outlay.xml
+++ b/app/src/main/res/layout/component_outlay.xml
@@ -1,53 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/component_outlay_maxheight"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
-    android:layout_gravity="center_horizontal">
+    android:layout_gravity="center_horizontal"
+    android:orientation="horizontal">
 
 
     <ImageView
+        android:id="@+id/ivIcon"
         android:layout_width="@dimen/component_outlay_iconsize"
         android:layout_height="@dimen/component_outlay_iconsize"
-        android:id="@+id/ivIcon"
-        android:layout_margin="3dp"
         android:layout_gravity="center"
-
-        />
-
-    <LinearLayout
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:orientation="vertical"
-        android:id="@+id/llM"
         android:layout_margin="3dp"
-        >
+        tools:src="@drawable/app_logo"
+        android:layout_centerVertical="true"
+        android:contentDescription="@string/outlayitemicon" />
 
-        <TextView
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:id="@+id/tvDescription"
-            tools:text="dasdasdas"
-            android:layout_margin="3dp"
-            />
-
-        <TextView
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:id="@+id/tvDate"
-            tools:text="dasdasdas"
-            android:layout_margin="3dp"
-            />
-    </LinearLayout>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@+id/ivIcon"
+        android:id="@+id/rlDetails"
+        android:layout_centerVertical="true">
 
     <TextView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:id="@+id/tvValue"
-        tools:text="dasdasdas"
+        android:id="@+id/tvDescription"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        tools:text="Nagybevásárlás"/>
+
+    <TextView
+        android:id="@+id/tvDate"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvDescription"
         android:layout_margin="3dp"
-        />
+        tools:text="2017.10.10 11:11:11"/>
 
 
-</LinearLayout>
+    </RelativeLayout>
+
+    <TextView
+        android:id="@+id/tvValue"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="3dp"
+        tools:text="dasdasdas"
+        android:textSize="20sp"
+        android:layout_toEndOf="@+id/rlDetails"
+        android:layout_centerVertical="true"/>
+    <View
+        android:id="@+id/separator"
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:layout_centerVertical="true"
+        android:background="#000000"
+        android:layout_alignParentBottom="true"/>
+
+</RelativeLayout>
