--- a/app/src/main/res/layout/fragment_monthly.xml
+++ b/app/src/main/res/layout/fragment_monthly.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_monthly"
+        android:id="@+id/rvMonthly"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
