--- a/app/src/main/res/layout/activity_outlays.xml
+++ b/app/src/main/res/layout/activity_outlays.xml
@@ -25,4 +25,14 @@
         android:layout_height="match_parent"
         android:background="@android:color/white" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="16dp"
+        android:src="@drawable/icon_plus"
+        android:id="@+id/fabAddOutlay"
+        />
+
+
 </LinearLayout>
