--- a/app/src/main/res/layout/fragment_outlays.xml
+++ b/app/src/main/res/layout/fragment_outlays.xml
@@ -9,21 +9,19 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvDaily"
-        android:scrollbars="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rvContent"
+            android:scrollbars="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fabAddOutlayDaily"
+            android:id="@+id/fabAddOutlayItem"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|right"
             android:layout_margin="16dp"
             android:src="@drawable/icon_plus" />
     </FrameLayout>
-
-
 
 </LinearLayout>
