--- a/app/src/main/res/layout/dialog_outlays.xml
+++ b/app/src/main/res/layout/dialog_outlays.xml
@@ -12,6 +12,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/spOutlayType"
+        android:entries="@array/outlaytypes"
         />
 
 
