--- a/app/src/main/res/layout/dialog_outlays.xml
+++ b/app/src/main/res/layout/dialog_outlays.xml
@@ -1,48 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="300dp"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_horizontal"
+    android:orientation="vertical">
+
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="50dp"
+        android:layout_gravity="center_horizontal"
         android:text="Add new outlay"
-        />
+        android:textSize="20sp" />
+
     <Spinner
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/spOutlayType"
-        android:entries="@array/outlaytypes"
-        />
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:entries="@array/outlaytypes" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="Description" />
 
     <EditText
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
         android:id="@+id/etOutlayDescription"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center_horizontal"
+        android:hint="Describe the items."
         />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="Price" />
+
     <EditText
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
         android:id="@+id/etOutlayValue"
-        />
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center_horizontal"
+        android:inputType="number"
+        android:hint="In HUF."/>
 
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp">
-     <Button
-         android:layout_width="100dp"
-         android:text="Add"
-         android:layout_height="50dp"
-         android:id="@+id/btnNewOutlay"
-         />
-    <Button
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:text="Cancel"
-        android:id="@+id/btnCancelOutlay"
-        />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal">
+
+        <Button
+            android:id="@+id/btnNewOutlay"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:text="Add"
+            android:background="@color/colorAccent"
+            android:textColor="@color/white"
+            android:layout_marginRight="35dp"/>
+
+        <Button
+            android:id="@+id/btnCancelOutlay"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:text="Cancel"
+            android:background="@color/accent"
+            android:textColor="@color/white"/>
     </LinearLayout>
 </LinearLayout>
