--- a/app/src/main/res/layout/component_outlay.xml
+++ b/app/src/main/res/layout/component_outlay.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/component_outlay_maxheight"
     android:layout_gravity="center_horizontal"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:id="@+id/rlOutlayComponent">
 
 
     <ImageView
