--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -10,5 +10,27 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Some weird statistics"/>
+        android:text="Statistics"/>
+
+    <TextView
+        android:layout_width="100dp"
+        android:text="Kiadások"
+        android:layout_height="50dp" />
+    <TextView
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:id="@+id/tvOutlayStats"
+        />
+    <TextView
+        android:text="Bevételek"
+        android:layout_width="100dp"
+        android:layout_height="50dp" />
+
+    <TextView
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:id="@+id/tvIncomeStats"
+        />
+
+
 </LinearLayout>
