--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,9 @@
     <color name="divider">#BDBDBD</color>
 
     <color name="white">#FFFFFF</color>
+    <color name="red">#ff0000</color>
+    <color name="verylow">#DCEDC8</color>
+    <color name="low">#CDDC39</color>
+    <color name="medium">#8BC34A</color>
+    <color name="high">#689F38</color>
 </resources>
