--- a/app/src/main/res/layout/dialog_outlays.xml
+++ b/app/src/main/res/layout/dialog_outlays.xml
@@ -9,8 +9,9 @@
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_gravity="center_horizontal"
-        android:text="Add new outlay"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:id="@+id/tvAddOutlay"
+        />
 
     <Spinner
         android:id="@+id/spOutlayType"
@@ -57,7 +58,6 @@
             android:id="@+id/btnNewOutlay"
             android:layout_width="100dp"
             android:layout_height="50dp"
-            android:text="Add"
             android:background="@color/colorAccent"
             android:textColor="@color/white"
             android:layout_marginRight="35dp"/>
