--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -14,7 +14,7 @@
 
     <TextView
         android:layout_width="100dp"
-        android:text="Kiadások"
+        android:text="Outlays"
         android:layout_height="50dp" />
     <TextView
         android:layout_width="100dp"
@@ -22,7 +22,7 @@
         android:id="@+id/tvOutlayStats"
         />
     <TextView
-        android:text="Bevételek"
+        android:text="Incomes"
         android:layout_width="100dp"
         android:layout_height="50dp" />
 
