--- a/app/src/main/res/layout/dialog_incomes.xml
+++ b/app/src/main/res/layout/dialog_incomes.xml
@@ -10,15 +10,15 @@
         android:layout_height="50dp"
         android:layout_gravity="center_horizontal"
         android:textSize="20sp"
-        android:id="@+id/tvAddOutlay"
+        android:id="@+id/tvAddIncome"
         />
 
     <Spinner
-        android:id="@+id/spOutlayType"
+        android:id="@+id/spIncomeType"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:entries="@array/outlaytypes" />
+        android:entries="@array/incometypes" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -27,7 +27,7 @@
         android:text="Description" />
 
     <EditText
-        android:id="@+id/etOutlayDescription"
+        android:id="@+id/etIncomeDescription"
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:layout_gravity="center_horizontal"
@@ -41,7 +41,7 @@
         android:text="Price" />
 
     <EditText
-        android:id="@+id/etOutlayValue"
+        android:id="@+id/etIncomeValue"
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:layout_gravity="center_horizontal"
@@ -55,7 +55,7 @@
         android:layout_gravity="center_horizontal">
 
         <Button
-            android:id="@+id/btnNewOutlay"
+            android:id="@+id/btnNewIncome"
             android:layout_width="100dp"
             android:layout_height="50dp"
             android:background="@color/colorAccent"
@@ -63,7 +63,7 @@
             android:layout_marginRight="35dp"/>
 
         <Button
-            android:id="@+id/btnCancelOutlay"
+            android:id="@+id/btnCancelIncome"
             android:layout_width="100dp"
             android:layout_height="50dp"
             android:text="Cancel"
