--- a/app/src/main/res/layout/component_income.xml
+++ b/app/src/main/res/layout/component_income.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/component_outlay_maxheight"
     android:layout_gravity="center_horizontal"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:id="@+id/rlIncomeComponent">
 
 
     <ImageView
@@ -15,7 +16,7 @@
         android:layout_margin="3dp"
         tools:src="@drawable/app_logo"
         android:layout_centerVertical="true"
-        android:contentDescription="@string/incomeitemicon" />
+        android:contentDescription="@string/outlayitemicon" />
 
     <RelativeLayout
         android:layout_width="wrap_content"
