--- a/app/src/main/res/layout/activity_income_statistics.xml
+++ b/app/src/main/res/layout/activity_income_statistics.xml
@@ -2,7 +2,8 @@
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/menu_background_75">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="3dp"
-            android:text="@string/outlays"
+            android:text="@string/incomes"
             android:textAlignment="center"
             android:textSize="20sp" />
 
