--- a/app/src/main/res/layout/activity_outlay_statistics.xml
+++ b/app/src/main/res/layout/activity_outlay_statistics.xml
@@ -2,13 +2,15 @@
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/menu_background_75">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:orientation="vertical"
+   >
 
 
         <TextView
