--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -3,35 +3,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:gravity="center_vertical"
     android:background="@drawable/menu_background">
 
 
 
-    <TextView
-        android:id="@+id/tvWelcome"
-        android:layout_width="wrap_content"
+ <!--   <ImageView
+        android:id="@+id/ivLogo"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
-        android:text="Welcome to Budget"
-        android:textSize="30sp" />
-
-    <TextView
-        android:id="@+id/tvName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvWelcome"
-        android:layout_centerInParent="true"
-        android:layout_marginBottom="100dp"
-        android:text="[Name]"
-        android:textSize="30sp" />
-
+        android:src="@drawable/dashboard_activity_logo"
+        android:layout_marginBottom="10dp"/>-->
 
     <Button
         android:id="@+id/btnIncome"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tvName"
+
         android:layout_centerInParent="true"
         android:layout_marginBottom="5dp"
         android:background="@color/primary_dark"
