--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#757575</color>
     <color name="icons">#212121</color>
-    <color name="divider">#BDBDBD</color>
+    <color name="gray">#BDBDBD</color>
 
     <color name="white">#FFFFFF</color>
     <color name="red">#ff0000</color>
