--- a/app/src/main/res/layout/dialog_incomes.xml
+++ b/app/src/main/res/layout/dialog_incomes.xml
@@ -58,16 +58,25 @@
             android:id="@+id/btnNewIncome"
             android:layout_width="100dp"
             android:layout_height="50dp"
+            android:layout_marginBottom="25dp"
+            android:layout_marginEnd="35dp"
             android:background="@color/colorAccent"
-            android:textColor="@color/white"
-            android:layout_marginRight="35dp"/>
+            android:textColor="@color/white" />
 
         <Button
             android:id="@+id/btnCancelIncome"
             android:layout_width="100dp"
             android:layout_height="50dp"
-            android:text="Cancel"
             android:background="@color/accent"
-            android:textColor="@color/white"/>
+            android:text="@string/btn_cancel"
+            android:textColor="@color/white" />
+
+        <Button
+            android:id="@+id/btnDelete"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:background="@color/red"
+            android:text="@string/btn_delete"
+            android:textColor="@color/white" />
     </LinearLayout>
 </LinearLayout>
